[gd_scene load_steps=4 format=3 uid="uid://cmixjye7lm3wh"]

[ext_resource type="Theme" uid="uid://ytuwofygfcvs" path="res://assets/GUI/Themes/GUI_theme.tres" id="1_hts24"]
[ext_resource type="Script" path="res://scenes/main_scenes/pause_menu.gd" id="2_ygsav"]

[sub_resource type="LabelSettings" id="LabelSettings_xnoqi"]
font_size = 128
font_color = Color(0.2, 0.2, 0.2, 1)

[node name="PauseGame" type="CanvasLayer"]
process_mode = 3

[node name="TranslucentBG" type="Panel" parent="."]
offset_right = 1919.0
offset_bottom = 1083.0

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1000, 200)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.5
offset_top = 58.0
offset_right = 499.5
offset_bottom = 258.0
grow_horizontal = 2
theme = ExtResource("1_hts24")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 188.0
offset_top = 49.0
offset_right = 812.0
offset_bottom = 151.0
theme = ExtResource("1_hts24")
text = "PAUSE"
label_settings = SubResource("LabelSettings_xnoqi")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="PauseGameControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -778.0
offset_top = -319.0
offset_right = 738.0
offset_bottom = -319.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ygsav")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseGameControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -352.0
offset_right = 352.0
offset_bottom = 483.0
grow_horizontal = 2
alignment = 1

[node name="ResumeGame" type="Button" parent="PauseGameControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 112)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_hts24")
theme_override_font_sizes/font_size = 64
text = "Resume"

[node name="HBoxContainer" type="HBoxContainer" parent="PauseGameControl/VBoxContainer"]
layout_mode = 2

[node name="SaveGame" type="Button" parent="PauseGameControl/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_hts24")
theme_override_font_sizes/font_size = 64
text = "Save Game"

[node name="LoadGame" type="Button" parent="PauseGameControl/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 124)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_hts24")
theme_override_font_sizes/font_size = 64
text = "Load Save"

[node name="MainMenu" type="Button" parent="PauseGameControl/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 112)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_hts24")
theme_override_font_sizes/font_size = 64
text = "To Main Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 50.0
offset_top = 691.0
offset_right = 1889.0
offset_bottom = 1051.0

[node name="MainPlayerStuff" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(450, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_hts24")

[node name="StatsContainer" type="VBoxContainer" parent="HBoxContainer/MainPlayerStuff"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
offset_left = 54.0
offset_top = 61.0
offset_right = 354.0
offset_bottom = 345.0
theme_override_constants/separation = 20

[node name="LabelName" type="Label" parent="HBoxContainer/MainPlayerStuff/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Player's stats"

[node name="LabelVelices" type="Label" parent="HBoxContainer/MainPlayerStuff/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Velices"

[node name="LabelHighestLevel" type="Label" parent="HBoxContainer/MainPlayerStuff/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Highest tower"

[node name="CurrentStats" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_hts24")

[node name="StatsContainer" type="VBoxContainer" parent="HBoxContainer/CurrentStats"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
offset_left = 54.0
offset_top = 61.0
offset_right = 354.0
offset_bottom = 345.0
theme_override_constants/separation = 20

[node name="LabelTitle" type="Label" parent="HBoxContainer/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Stats"

[node name="LabelStrength" type="Label" parent="HBoxContainer/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Strength"

[node name="LabelVitality" type="Label" parent="HBoxContainer/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Vitality"

[node name="LabelIntelligence" type="Label" parent="HBoxContainer/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Intelligence"

[node name="LabelSpeed" type="Label" parent="HBoxContainer/CurrentStats/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Speed"

[node name="CurrentOrbs" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_hts24")

[node name="StatsContainer" type="VBoxContainer" parent="HBoxContainer/CurrentOrbs"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
offset_left = 58.0
offset_top = 55.0
offset_right = 358.0
offset_bottom = 328.0
theme_override_constants/separation = 20

[node name="LabelTitle" type="Label" parent="HBoxContainer/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Elemental Orbs"

[node name="LabelWater" type="Label" parent="HBoxContainer/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Water"

[node name="LabelEarth" type="Label" parent="HBoxContainer/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Earth"

[node name="LabelFire" type="Label" parent="HBoxContainer/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Fire"

[node name="LabelWind" type="Label" parent="HBoxContainer/CurrentOrbs/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Wind"

[node name="WeaponMods" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_hts24")

[node name="LabelTitle" type="Label" parent="HBoxContainer/WeaponMods"]
layout_mode = 2
offset_left = 80.0
offset_top = 56.0
offset_right = 539.0
offset_bottom = 106.0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Weapon mods"

[node name="ModsContainer" type="VBoxContainer" parent="HBoxContainer/WeaponMods"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
offset_left = 105.0
offset_top = 95.0
offset_right = 601.0
offset_bottom = 346.0
theme_override_constants/separation = 20

[node name="LabelMod1" type="Label" parent="HBoxContainer/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"

[node name="LabelMod2" type="Label" parent="HBoxContainer/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"

[node name="LabelMod3" type="Label" parent="HBoxContainer/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"

[node name="LabelMod4" type="Label" parent="HBoxContainer/WeaponMods/ModsContainer"]
layout_mode = 2
text = "--- Empty Mod ---"
